--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import 'tailwindcss';
+
+:root {
+  --purple-500: hsl(263, 55%, 52%);
+  --gray-500: hsl(217, 19%, 35%);
+  --dark-blue: hsl(219, 29%, 14%);
+}
