--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap');
 @import 'tailwindcss';
 
 :root {
   --purple-500: hsl(263, 55%, 52%);
   --gray-500: hsl(217, 19%, 35%);
   --dark-blue: hsl(219, 29%, 14%);
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100dvh;
+  font-family: 'Barlow Semi Condensed';
 }
